--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h5,
 h6 {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family:"COURIER", 'Verdana', arial;
 }
 
 .clear-fix {
@@ -26,7 +26,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: #FF8C00;
   line-height: 48px;
   display: inline;
 }
@@ -40,7 +40,7 @@ h2 {
 }
 
 h3 {
-  font-style: italic;
+  font-style: oblique;
   font-size: 20px;
   color: #000;
   line-height: 22px;
@@ -49,7 +49,7 @@ h3 {
 h4 {
   font-weight: bold;
   font-size: 14px;
-  color: #4a4a4a;
+  color:#4a4a4a;
   line-height: 17px;
 }
 
@@ -63,7 +63,7 @@ h5 {
 
 
 .date-text {
-  font-style: italic;
+  font-style: oblique;
   font-size: 14px;
   color: #999;
   line-height: 16px;
@@ -71,7 +71,7 @@ h5 {
 }
 
 .location-text {
-  font-style: italic;
+  font-style: oblique;
   font-size: 14px;
   color: #999;
   line-height: 16px;
@@ -81,35 +81,35 @@ h5 {
 
 p {
   font-size: 14px;
-  color: #333;
+  color: #FF8C00;
   line-height: 21px;
 }
 
 a {
-  color: #1199c3;
+  color: #FF8C00;
   text-decoration: none;
   margin-top: 10px;
   display: block;
 }
 
 .welcome-message {
-  font-style: italic;
+  font-style: oblique;
   font-size: 18px;
-  color: #f3f3f3;
+  color: #FF8C00;
   line-height: 28px;
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #FF8C00;
   display: none;
 }
 
 .orange {
-  background-color: #f5ae23;
+  background-color:#f3f3f3;
 }
 
 .orange-text {
-  color: #f5ae23;
+  color: #FF8C00;
 }
 
 .white-text {
@@ -124,12 +124,12 @@ a {
 }
 
 .dark-gray {
-  background-color: #4a4a4a;
+  background-color:#708090;
 }
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color:#708090  ;
 }
 
 .flex-box {
